kubernetes/whoami/manifest/deployment.yml
---
kind: Namespace
apiVersion: v1
metadata:
  name: my-whoami

---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: whoami
  namespace: my-whoami
  labels:
    app: whoami
spec:
  replicas: 1
  selector:
    matchLabels:
      app: whoami
  template:
    metadata:
      labels:
        app: whoami
    spec:
      containers:
        - name: whoami
          image: traefik/whoami
          ports:
            - name: web
              containerPort: 80

---
kind: Service
apiVersion: v1
metadata:
  name: whoami-svc
  namespace: my-whoami
spec:
  selector:
    app: whoami
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
